--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.11.0"
   },
