--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "version-one",
   "private": true,
+  "homepage": "https://davidkori.github.io/birthday.com/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
