--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "version-one",
   "private": true,
-  "homepage": "https://davidkori.github.io/birthday.com",
+  "homepage": "https://davidkori.github.io/birthday.com/login",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -18,7 +18,8 @@
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.11.0"
+    "react-router": "^7.11.0",
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
